GUI setting tab add system settings page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f4fdbe; }
+  background: #93d98a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4c18d1; }
+  background: #7d7267; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #27dec9; }
+  background: #53237f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #892c15; }
+  background: #c6c609; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1e8b6f; }
+  background: #489372; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ba8d37; }
+  background: #69fb2a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #343859; }
+  background: #c508e3; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a50ebc; }
+  background: #118558; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #10d8af; }
+  background: #a46b10; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5be058; }
+  background: #22fd75; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #80a139; }
+  background: #ff552a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #1dda82; }
+  background: #0cab54; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0f72d1; }
+  background: #a924e6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4a4693; }
+  background: #57efde; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c08f9a; }
+  background: #4e6679; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8a1fed; }
+  background: #498d44; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9c1ccc; }
+  background: #98535c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #1951c1; }
+  background: #07fd2d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7207ca; }
+  background: #08caa3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2bc861; }
+  background: #df85ef; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d80e6b; }
+  background: #72ed73; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #2cad39; }
+  background: #c8865e; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #162b66; }
+  background: #89539f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7e27b9; }
+  background: #6858e1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e7f7ff; }
+  background: #0bb83c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c8b676; }
+  background: #2f8d29; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d9cffd; }
+  background: #bd70c5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #872908; }
+  background: #2289d1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #68ccc4; }
+  background: #0cb80e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3e6957; }
+  background: #c40bb5; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #26ab8c; }
+  background: #983424; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #98d686; }
+  background: #85337b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #259902; }
+  background: #60665d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #26952e; }
+  background: #1550e2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b4adc8; }
+  background: #bc31b6; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #19b6ee; }
+  background: #9246f4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9f215d; }
+  background: #cb1905; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #393a61; }
+  background: #fc4b28; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b4e0e4; }
+  background: #7f4871; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ac7d9d; }
+  background: #490796; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2af924; }
+  background: #cd73ab; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #383a93; }
+  background: #7a6ce3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e1e9c7; }
+  background: #9ea8e7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c8aaa2; }
+  background: #7455a8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3f0af4; }
+  background: #ed15c2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a9f217; }
+  background: #5b5f19; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #92e6a3; }
+  background: #119f4c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #55c8db; }
+  background: #f70b90; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #889064; }
+  background: #3fdc69; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #793d0b; }
+  background: #609fb5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a147f6; }
+  background: #bb564d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #436986; }
+  background: #c79f33; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #34483b; }
+  background: #c51b94; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #21b2cb; }
+  background: #6fb18f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #dfe9f4; }
+  background: #99908b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #76cd83; }
+  background: #c3c4e0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5a5a2c; }
+  background: #555479; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ad4f36; }
+  background: #9ec80e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #1a0853; }
+  background: #b8801e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ac2e3d; }
+  background: #c248b8; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a41419; }
+  background: #54898c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #bc7897; }
+  background: #75b84b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #af645b; }
+  background: #613a74; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #dfd054; }
+  background: #5ca4af; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f675bc; }
+  background: #d0ab04; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #882539; }
+  background: #c0f7a1; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7350dc; }
+  background: #ef2dc4; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c28796; }
+  background: #90850b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #dad38a; }
+  background: #14fb05; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0c8da5; }
+  background: #cde277; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #cc805a; }
+  background: #3b5b91; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #04f38c; }
+  background: #2a91a5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #360ce2; }
+  background: #4a71ac; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f0d14e; }
+  background: #1f6ff3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d4681a; }
+  background: #576621; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #dddd3b; }
+  background: #e541c2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #920387; }
+  background: #14b277; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8ce084; }
+  background: #0ab3ad; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #79aac8; }
+  background: #81209c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #657f71; }
+  background: #a32f2e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #35f53e; }
+  background: #3aa592; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fe03c5; }
+  background: #6c564e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #7e6148; }
+  background: #bdf3e3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #fb87ee; }
+  background: #40c416; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #49ff97; }
+  background: #65fb01; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #8486e2; }
+  background: #5b0a8e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #fcb706; }
+  background: #a169f7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #55cf17; }
+  background: #797fec; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9bfef5; }
+  background: #9f6ca3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6b52ab; }
+  background: #29ab48; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #718568; }
+  background: #cd2391; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b9cb33; }
+  background: #e98aea; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #70d893; }
+  background: #13c598; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #137a4c; }
+  background: #682a15; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #acb53f; }
+  background: #2ed3d1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #5ff6a4; }
+  background: #d4f068; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ba2d9a; }
+  background: #a9d9ec; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #eb16f3; }
+  background: #667f65; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9159d9; }
+  background: #c8334e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #f714db; }
+  background: #ebc9ee; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9305,7 +9305,6 @@ th {
     display: flex;
     flex-direction: column;
     background: white;
-    border-radius: 13px;
     padding: 10px;
     margin-right: 35px;
     -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.1);
@@ -9524,7 +9523,6 @@ table .bold-heading {
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.1) !important;
   background: white;
-  border-radius: 13px;
   display: flex;
   border: 0px solid #bababa !important; }
   .widget-box .widget-heading {
@@ -9649,14 +9647,13 @@ table .bold-heading {
   margin-top: 46px;
   margin-bottom: 100px;
   padding-bottom: 30px;
-  background: #f3f4f9;
-  border-radius: 18px; }
+  background: #f3f4f9; }
   .device-tabs-wrapper .nav-tabs {
     padding-left: 44px; }
   .device-tabs-wrapper .header-menu .nav-tabs a {
     background: none;
     border: 0px;
-    padding: 25px 10px;
+    padding: 20px 10px;
     margin-right: 60px;
     color: #9a9a9a;
     text-decoration: none;
@@ -9683,17 +9680,16 @@ table .bold-heading {
       .device-tabs-wrapper .inner-tab-content .inner-tab-content-left-col .nav-link {
         margin-bottom: 14px; }
     .device-tabs-wrapper .inner-tab-content .nav-link.active {
-      border-radius: 15px;
       background-color: white; }
     .device-tabs-wrapper .inner-tab-content .nav-link {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      font-size: 19px;
+      font-size: 18px;
       line-height: 26px;
       text-decoration: none;
       color: #4c4c4c;
-      padding: 24px 24px; }
+      padding: 20px; }
       .device-tabs-wrapper .inner-tab-content .nav-link img {
         width: 100%; }
 
@@ -9754,7 +9750,6 @@ table .bold-heading {
   padding: 10px 15px;
   margin: 4px 14px 0px;
   background-color: #f6f6f6;
-  border-radius: 13px;
   cursor: pointer; }
   .tab-right-collapse-box .collapse-heading-btn-row {
     border-bottom: 1px solid #bababa;
@@ -9782,9 +9777,6 @@ table .bold-heading {
       display: inline; }
       .tab-right-collapse-box .collapse-devices-box div span:first-child {
         margin-top: 0px; }
-
-.border-theme {
-  border-radius: 15px; }
 
 .inner-tab-content-right-col {
   padding: 0px 20px;
@@ -10347,7 +10339,6 @@ table .bold-heading {
   padding: 10px 15px;
   margin: 4px 14px 0px;
   background-color: white;
-  border-radius: 8px;
   cursor: pointer;
   border: 1px solid #dcdde1; }
   .policy-accordions-box .collapse-heading-btn-row {
